fixed white space issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,162 +1,164 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+html,body
+{
+   width: 100%;
+   height: 100%;
+   margin: 0px;
+   padding: 0px;
+   overflow-x: hidden;
 }
 
 body {
-    font-family: Helvetica, Arial, sans-serif;
-    color: black;
+   font-family: Helvetica, Arial, sans-serif;
+   color: black;
+   width: 100%;
 }
 
 :root {
-    --primary-color: rgb(0, 0, 129);
-    --secondary-color: rgb(9, 238, 219);
-    --fill-color: black;
-    --section-title: black;
+   --primary-color: rgb(0, 0, 129);
+   --secondary-color: rgb(9, 238, 219);
+   --fill-color: black;
+   --section-title: black;
 }
 
 /* Beginning of header code */
+
 header {
-    padding: 20px 35px;
-    background-color: var(--secondary-color);
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    font-family: fantasy;
+   padding: 20px 35px;
+   background-color: var(--secondary-color);
+   display: flex;
+   justify-content: space-between;
+   flex-wrap: wrap;
+   font-family: fantasy;
 }
 
 header h1 {
-    font-weight: bold;
-    margin: 0;
-    font-size: 36px;
-    color: var(--fill-color);
+   font-weight: bold;
+   margin: auto;
+   font-size: 36px;
+   color: var(--fill-color);
 }
 
 header a {
-    text-decoration: none;
-    color: var(--fill-color);
+   text-decoration: none;
+   color: var(--fill-color);
 }
 
 header nav {
-    margin: 7px 0;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+   margin: 7px 0;
+   font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 header nav ul {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    list-style: none;
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-between;
+   align-items: center;
+   list-style: none;
 }
 
 header nav ul li a {
-    padding: 10px 15px;
-    font-weight: lighter;
-    font-size: 1.55vw;
+   padding: 10px 15px;
+   font-weight: lighter;
+   font-size: 1.55vw;
 }
 
 /* End of header code */
 
-/* Beginning of footer code */
-
-
-
-/* End of footer code */
-
 section {
-    padding: 60px;
+   padding: 60px;
 }
 
 /* Beginning of hero  */
 .hero {
-    background-size: cover;
-    background-position: center;
-    /* use santa monica picture */
-    background-image: url("../images/bg2.jpg");
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-items: flex-start;
+   background-size: cover;
+   background-position: center;
+   /* use santa monica picture */
+   background-image: url("../images/bg2.jpg");
+   display: flex;
+   justify-content: center;
+   flex-wrap: wrap;
+   align-items: flex-start;
+   width:100%;
 }
 
 .hero-text {
-    width: 35%;
-    text-align: right;
-    font-size: 20px;
-    margin: 7%;
-    color: white;
+   width: 35%;
+   text-align: right;
+   font-size: 20px;
+   margin: 7%;
+   color: white;
 }
 
 .profile {
-    width: 700px;
-    height: 450px;
+   width: 700px;
+   height: 450px;
 }
+
 /* End of hero */
 
 .section-title {
-    font-size: 40px;
-    color: var(--primary-color);
-    margin: 20px;
-    width: 150px;
-    padding-left: 10px;
+   font-size: 40px;
+   color: var(--primary-color);
+   margin: 20px;
+   width: 150px;
+   padding-left: 10px;
 }
 
 .section-title-div {
-    border-right: 3px solid;
-    width: 200px;
-    text-align: right;
+   border-right: 3px solid;
+   width: 200px;
+   text-align: right;
 }
 
 /* Beginning of About Me section */
+
 .about, .contact {
-    display: inline-flex;
+   display: inline-flex;
 }
 
 .about h2, .contact h2 {
-    padding: 0 20px 0 0;
-    color: var(--primary-color);
-    
+   padding: 0 20px 0 0;
+   color: var(--primary-color);
+   
 }
 
 .about p {
-    font-size: 20px;
-    color: black;
-    margin: 3%;
+   font-size: 20px;
+   color: black;
+   margin: 3%;
 }
 
 /* End of About Me section */
 
 /* Beginning of Projects section */
 .portfolio-grid {
-    display: inline-flex;
-    
+   display: inline-flex;
+   
 }
 
 .grid-container {
-    display: grid;
-    padding: 20px;
-    margin: 0 auto;
-    grid-template-columns: repeat(3, minmax(200px, 1fr));
-    grid-template-rows: repeat(3, minmax(100px, 1fr));
-    grid-gap: 10px;
-    margin: 0 0 0 3%;  
+   display: grid;
+   padding: 20px;
+   margin: 0 auto;
+   grid-template-columns: repeat(3, minmax(200px, 1fr));
+   grid-template-rows: repeat(3, minmax(100px, 1fr));
+   grid-gap: 10px;
+   margin: 0 0 0 3%;  
 }
 
 .portfolio-grid-item {
-    display: flex;
-    border: solid;
-    justify-content: center;
-    align-items: center;
-    padding: 1em;
-    color: black;
-    
+   display: flex;
+   border: solid;
+   justify-content: center;
+   align-items: center;
+   padding: 1em;
+   color: black;
+   
 }
 
 .portfolio-grid-item:first-child {
-    grid-column: auto/span 2;
-    grid-row: auto/span 2;
+   grid-column: auto/span 2;
+   grid-row: auto/span 2;
 }
 
 /* End of Projects section */
@@ -164,123 +166,32 @@ section {
 /* Beginning of Contact Section */
 
 .contact ul {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    list-style: none;
-    margin: 0 0 0 3%;
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-between;
+   align-items: center;
+   list-style: none;
+   margin: 0 0 0 3%;
 }
 
 .contact ul li{
-    padding: 10px 15px;
-    font-size: 1.55vw;
-    align-items: center;
+   padding: 10px 15px;
+   font-size: 1.55vw;
+   align-items: center;
 }
 
 /* End of Contact Section */
 
 /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
 @media screen and (max-width: 980px) {
-    header {
-        padding-bottom: 0;
-        justify-content: center;
-    }
-
-    header h1 {
-        width: 100%;
-        text-align: center;
-    }
-
-    header nav ul {
-        margin-top: 20px;
-        width: 100%;
-        justify-content: center;
-    }
-
-    header nav ul li a {
-        font-size: 20px;
-    }
-
-    footer h2, footer div {
-        text-align: center;
-        width: 100%;
-    }
-
-    .hero {
-        width: 100%;
-        text-align: center;
-    }
-
-    .section-title {
-        width: 80%;
-    }
-
-    .trainer {
-        flex: 0 70%;
-    }
-
-    .contact-info iframe {
-        flex: 1 100%;
-    }
+   
 }
-
 /* MEDIA QUERY FOR TABLETS AND SMALLER */
 @media screen and (max-width: 768px) {
-    section {
-        padding: 30px 15px;
-    }
-    
-    .step h3 {
-        flex: 1 100%;
-        text-align: center;
-    }
-
-    .step-info {
-        flex: 2 100%;
-        text-align: center;
-        justify-content: center;
-    }
-
-    .step-img {
-        flex: 0 32%;
-        margin-right: 0;
-        margin-top: 15px;
-        margin-bottom: 15px;
-    }
-
-    .step-text {
-        flex: 100%;
-    }
+   
 }
 
 /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
 @media screen and (max-width: 575px) {
-   .hero-form button {
-       width: 100%;
-   }
-
-   .section-title {
-       width: 95%;
-   }
-
-   .intro p {
-       width: 100%;
-   }
-
-   .trainer {
-       flex: 0 100%;
-   }
-
-   .contact-info {
-       text-align: center;
-   }
-
-   .contact-info > * {
-       flex: 0 100%;
-   }
-
-   .contact-form {
-       order: 3;
-   }
+  
 }
